<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custompage_url_capiton"
            android:textSize="18dp"
            android:id="@+id/textView" android:layout_gravity="left|center_vertical"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/custompage_url_hint"
            android:id="@+id/custompage_url" android:layout_gravity="left|center_vertical"/>
    <View  android:layout_width="match_parent" android:layout_height="1dp" android:background="@android:color/darker_gray" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custompage_name_capiton"
            android:textSize="18dp"
            android:id="@+id/textView1" android:layout_gravity="left|center_vertical"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/custompage_name_hint"
            android:id="@+id/custompage_name" android:layout_gravity="left|center_vertical"/>
    <View  android:layout_width="match_parent" android:layout_height="1dp" android:background="@android:color/darker_gray" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custompage_spinner_capiton"
            android:textSize="18dp"
            android:id="@+id/textView2" android:layout_gravity="left|center_vertical"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/custompage_spinner" android:layout_gravity="left|center_vertical"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/custompage_add_category_button"
            android:drawableLeft="@drawable/ic_action_new"
            android:text="@string/custompage_add_category"
            android:layout_gravity="left|center_vertical" />
</LinearLayout>